Fixed navbar overlap

--- a/src/components/NavbarServiceContext/NavbarServiceContext.scss
+++ b/src/components/NavbarServiceContext/NavbarServiceContext.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables';
 
-.navbar-context {
+.navbar-service-context {
   position: absolute;
   top: 0;
   left: 72px;
@@ -8,6 +8,7 @@
   background-color: $gray-100;
   width: 216px;
   box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.25);
+  z-index: 1;
 
   .context-header {
     margin-top: 28px;
